Fix spacing in navbar, and make it a bit smaller so the center-nav and right-nav sections don't overlap and wrap.

--- a/css/dancedeets.css
+++ b/css/dancedeets.css
@@ -23,9 +23,8 @@
 }
 /* these all relate to giving regular text a proper display color/padding */
 .nav-text {
-	position: relative;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  position: relative;
+  padding: 10px;
   line-height: 20px;
 
   color: #fff;
